--- a/burgerguru/macprice/templates/macprice/index.html
+++ b/burgerguru/macprice/templates/macprice/index.html
@@ -10,13 +10,28 @@
 			<li>{{ p.product_name }} {{ p.product_type }} - {{ p.price }}</li>
 		{% endfor %}
 		</ul>
-		<h1>Products</h1>
+		<h1>Products 1</h1>
 		<ul>
 		{% for p in prodList %}
 			<li>{{ p.product_name }} {{ p.product_type }} - {{ p.price }}</li>
 		{% endfor %}
 		</ul>
+		<h2>{{ var.0 }}</h2>
 		
-		<h2>{{ var }}</h2>
+		<h1>Products 2</h1>
+		<ul>
+		{% for p in prodList2 %}
+			<li>{{ p.product_name }} {{ p.product_type }} - {{ p.price }}</li>
+		{% endfor %}
+		</ul>
+		<h2>{{ var.1 }}</h2>
+		
+		<h1>Products 3</h1>
+		<ul>
+		{% for p in prodList3 %}
+			<li>{{ p.product_name }} {{ p.product_type }} - {{ p.price }}</li>
+		{% endfor %}
+		</ul>
+		<h2>{{ var.2 }}</h2>
 	</body>
 </html>
